infra/arangodb/arangodb_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: arangodb
  namespace: jalapeno
spec:
  ports:
  - port: 8529
    name: arango
  clusterIP: None
  selector:
    app: arangodb
