infra/arangodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
  - protocol: TCP
    port: 8530
    targetPort: 9376
  selector:
    app: MyApp
